--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   min-height:100vh;
   width:100%;
  background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/image41.jpg);
-/*  background-image:linear-gradient(rgba(0, 0, 0, 0.2),#e7efed),url(images/image4.jpg); */
+/*  background-image:linear-gradient(rgba(0, 0, 0, 0.2),#e7efed),url(image4.jpg); */
  background-position:center;
   background-size: cover;
   position:relative;
